kubernetes/backToFuture/03_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back2future-ingress
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    #konghq.com/plugins: httpbin-free-tier
spec:
  rules:
    - http:
        paths:
          - path: /back2future
            pathType: Prefix
            backend:
              service:
                name: back2future-quote-service
                port:
                  number: 80
